feat: Add smart scraping fallback system with Firecrawl, SerpAPI, OpenAI, and Resend integration

--- a/.env.example
+++ b/.env.example
@@ -17,30 +17,63 @@ SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 # ============================================
 
 # Anthropic (Claude Sonnet 4.5 & Haiku 4)
+# Usage: Cover Letter Generation + Quality Judge
 ANTHROPIC_API_KEY=sk-ant-api03-xxx
 
 # Perplexity (Company Research)
+# Usage: Deep company intelligence, values, recent news
 PERPLEXITY_API_KEY=pplx-xxx
 
-# OpenAI (Optional - for embeddings)
+# OpenAI (Controller LLM + Embeddings)
+# Usage: Job routing, classification, writing style embeddings
 OPENAI_API_KEY=sk-proj-xxx
 
 # ============================================
-# 3. SCRAPING
+# 3. SCRAPING (SMART FALLBACK SYSTEM)
 # ============================================
+# Fallback Order: Firecrawl → SerpAPI → ScraperAPI → Playwright
+# See docs/SCRAPING_STRATEGY.md for details
 
-# ScraperAPI (LinkedIn, complex sites)
+# Firecrawl (PRIMARY - Modern, JS-heavy sites)
+# Priority: 1
+# Best for: LinkedIn, Greenhouse, Lever, modern job boards
+# Rate Limit: 500 requests/month (Hobby), 10,000/month (Standard)
+FIRECRAWL_API_KEY=fc-xxx
+
+# SerpAPI (SECONDARY - Google Jobs aggregator)
+# Priority: 2
+# Best for: Multi-platform job discovery, structured data
+# Rate Limit: 100 searches/month (Free), 5000/month (Paid)
+SERPAPI_KEY=5d202f16xxx
+
+# ScraperAPI (TERTIARY - Complex sites with anti-bot)
+# Priority: 3
+# Best for: LinkedIn (when Firecrawl fails), Indeed
+# Rate Limit: 1000 requests/month (Free)
 SCRAPER_API_KEY=your_scraper_api_key
 
-# BrightData (Alternative for LinkedIn)
+# BrightData (FALLBACK 4 - Enterprise LinkedIn scraping)
+# Priority: 4
+# Only used if all above fail
 BRIGHTDATA_USERNAME=your_username
 BRIGHTDATA_PASSWORD=your_password
 
-# SerpAPI (Google Jobs search)
-SERP_API_KEY=your_serpapi_key
+# Local Playwright (FINAL FALLBACK)
+# Priority: 5
+# Free but slow, no rate limits
+# Auto-enabled, no API key needed
 
 # ============================================
-# 4. SECURITY
+# 4. COMMUNICATION
+# ============================================
+
+# Resend (Transactional Emails)
+# Usage: Job notifications, weekly summaries, auth emails
+# Rate Limit: 3,000 emails/month (Free), then $0.01/email
+RESEND_API_KEY=re_xxx
+
+# ============================================
+# 5. SECURITY
 # ============================================
 
 # Encryption Key (Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
@@ -50,17 +83,12 @@ ENCRYPTION_KEY=your_fernet_key_here
 JWT_SECRET=your_jwt_secret_here
 
 # ============================================
-# 5. GITHUB (OPTIONAL - FOR MCP)
+# 6. GITHUB (OPTIONAL - FOR MCP INTEGRATION)
 # ============================================
 GITHUB_PAT=ghp_xxx
 
 # ============================================
-# 6. CONTEXT7 (OPTIONAL - FOR AUTO-UPDATES)
-# ============================================
-CONTEXT7_API_KEY=ctx7sk-xxx
-
-# ============================================
-# 7. MONITORING (OPTIONAL)
+# 7. MONITORING (PRODUCTION ONLY)
 # ============================================
 
 # Sentry (Error Tracking)
@@ -70,7 +98,24 @@ SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
 LOGTAIL_SOURCE_TOKEN=your_logtail_token
 
 # ============================================
-# 8. DEPLOYMENT
+# 8. PAYMENTS (PHASE 2)
+# ============================================
+
+# Stripe (Subscription Management)
+STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_WEBHOOK_SECRET=whsec_xxx
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+
+# ============================================
+# 9. ANALYTICS (PHASE 2)
+# ============================================
+
+# PostHog (Product Analytics)
+NEXT_PUBLIC_POSTHOG_KEY=phc_xxx
+NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
+
+# ============================================
+# 10. DEPLOYMENT
 # ============================================
 
 # Vercel (Auto-populated in production)
@@ -80,11 +125,36 @@ VERCEL_URL=your-app.vercel.app
 NODE_ENV=development # or 'production'
 
 # ============================================
-# 9. CHROME EXTENSION (OPTIONAL)
+# 11. CHROME EXTENSION
 # ============================================
 
 # Extension ID (from Chrome Web Store)
 NEXT_PUBLIC_EXTENSION_ID=abcdefghijklmnop
+
+# ============================================
+# SCRAPING STRATEGY FLAGS (OPTIONAL)
+# ============================================
+# Override default fallback behavior
+
+# Force specific scraper (for testing)
+# Options: firecrawl | serpapi | scraperapi | playwright
+# FORCE_SCRAPER=firecrawl
+
+# Disable specific scrapers
+# DISABLE_FIRECRAWL=false
+# DISABLE_SERPAPI=false
+# DISABLE_SCRAPERAPI=false
+# DISABLE_PLAYWRIGHT=false
+
+# Retry configuration
+# MAX_SCRAPING_RETRIES=3
+# SCRAPING_TIMEOUT_MS=30000
+
+# ============================================
+# COST TRACKING (OPTIONAL)
+# ============================================
+# Enable to log API costs per request
+# ENABLE_COST_TRACKING=true
 
 # ============================================
 # NOTES
@@ -95,8 +165,15 @@ NEXT_PUBLIC_EXTENSION_ID=abcdefghijklmnop
 # 
 # 2. Encryption Key: Must be a valid Fernet key (44 characters)
 # 
-# 3. For local development, Supabase CLI auto-populates some vars
+# 3. Scraping Fallback: System auto-selects best API based on:
+#    - Site type (LinkedIn vs company website)
+#    - Rate limits remaining
+#    - Previous success rate
 # 
-# 4. Chrome Extension: Must use NEXT_PUBLIC_ prefix for client access
+# 4. For local development, Supabase CLI auto-populates some vars
+# 
+# 5. Chrome Extension: Must use NEXT_PUBLIC_ prefix for client access
+# 
+# 6. Phase 2 APIs (Stripe, PostHog): Only needed after MVP launch
 # 
 # ============================================
