fix: Revert Firecrawl to fallback only - SerpAPI and ScraperAPI are primary for job boards

--- a/.env.example
+++ b/.env.example
@@ -31,30 +31,32 @@ OPENAI_API_KEY=sk-proj-xxx
 # ============================================
 # 3. SCRAPING (SMART FALLBACK SYSTEM)
 # ============================================
-# Fallback Order: Firecrawl → SerpAPI → ScraperAPI → Playwright
+# CORRECTED Fallback Order:
+# Job Boards: SerpAPI → ScraperAPI → Playwright
+# ATS Systems: Firecrawl → ScraperAPI → Playwright
 # See docs/SCRAPING_STRATEGY.md for details
 
-# Firecrawl (PRIMARY - Modern, JS-heavy sites)
-# Priority: 1
-# Best for: LinkedIn, Greenhouse, Lever, modern job boards
-# Rate Limit: 500 requests/month (Hobby), 10,000/month (Standard)
-FIRECRAWL_API_KEY=fc-xxx
-
-# SerpAPI (SECONDARY - Google Jobs aggregator)
-# Priority: 2
-# Best for: Multi-platform job discovery, structured data
+# SerpAPI (PRIMARY for Job Boards)
+# Priority: 1 for LinkedIn, Indeed, StepStone
+# Best for: Structured Google Jobs data, no direct scraping
 # Rate Limit: 100 searches/month (Free), 5000/month (Paid)
 SERPAPI_KEY=5d202f16xxx
 
-# ScraperAPI (TERTIARY - Complex sites with anti-bot)
-# Priority: 3
-# Best for: LinkedIn (when Firecrawl fails), Indeed
+# ScraperAPI (SECONDARY - Anti-bot bypass)
+# Priority: 2 for job boards, fallback for ATS
+# Best for: Direct URLs when SerpAPI fails
 # Rate Limit: 1000 requests/month (Free)
 SCRAPER_API_KEY=your_scraper_api_key
 
-# BrightData (FALLBACK 4 - Enterprise LinkedIn scraping)
+# Firecrawl (FALLBACK for ATS only)
+# Priority: 3 - ONLY for Greenhouse, Lever, Workday, Ashby
+# NOT for LinkedIn/Indeed/StepStone!
+# Rate Limit: 500 requests/month (Hobby), 10,000/month (Standard)
+FIRECRAWL_API_KEY=fc-xxx
+
+# BrightData (ENTERPRISE FALLBACK - LinkedIn only)
 # Priority: 4
-# Only used if all above fail
+# Only used if all above fail for LinkedIn
 BRIGHTDATA_USERNAME=your_username
 BRIGHTDATA_PASSWORD=your_password
 
@@ -137,13 +139,13 @@ NEXT_PUBLIC_EXTENSION_ID=abcdefghijklmnop
 # Override default fallback behavior
 
 # Force specific scraper (for testing)
-# Options: firecrawl | serpapi | scraperapi | playwright
-# FORCE_SCRAPER=firecrawl
+# Options: serpapi | scraperapi | firecrawl | playwright
+# FORCE_SCRAPER=serpapi
 
 # Disable specific scrapers
-# DISABLE_FIRECRAWL=false
 # DISABLE_SERPAPI=false
 # DISABLE_SCRAPERAPI=false
+# DISABLE_FIRECRAWL=false
 # DISABLE_PLAYWRIGHT=false
 
 # Retry configuration
@@ -165,15 +167,17 @@ NEXT_PUBLIC_EXTENSION_ID=abcdefghijklmnop
 # 
 # 2. Encryption Key: Must be a valid Fernet key (44 characters)
 # 
-# 3. Scraping Fallback: System auto-selects best API based on:
-#    - Site type (LinkedIn vs company website)
-#    - Rate limits remaining
-#    - Previous success rate
+# 3. Scraping Fallback CORRECTED:
+#    - Job Boards (LinkedIn/Indeed): SerpAPI → ScraperAPI → Playwright
+#    - ATS Systems (Greenhouse/Lever): Firecrawl → ScraperAPI → Playwright
+#    - Company Sites: Playwright → ScraperAPI → Firecrawl
 # 
-# 4. For local development, Supabase CLI auto-populates some vars
+# 4. Firecrawl is FALLBACK ONLY - Do not use for job boards!
 # 
-# 5. Chrome Extension: Must use NEXT_PUBLIC_ prefix for client access
+# 5. For local development, Supabase CLI auto-populates some vars
 # 
-# 6. Phase 2 APIs (Stripe, PostHog): Only needed after MVP launch
+# 6. Chrome Extension: Must use NEXT_PUBLIC_ prefix for client access
+# 
+# 7. Phase 2 APIs (Stripe, PostHog): Only needed after MVP launch
 # 
 # ============================================
