feat: Add Stripe payment system with subscriptions, invoices, webhooks

--- a/.env.example
+++ b/.env.example
@@ -105,8 +105,25 @@ LOGTAIL_SOURCE_TOKEN=your_logtail_token
 
 # Stripe (Subscription Management)
 STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_PUBLISHABLE_KEY=pk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
+
+# ============================================
+# 8.5 BACKGROUND JOBS
+# ============================================
+
+# Inngest (Background Jobs & Queue)
+INNGEST_EVENT_KEY=...
+INNGEST_SIGNING_KEY=...
+
+# ============================================
+# 8.6 RATE LIMITING
+# ============================================
+
+# Upstash Redis (Rate Limiting)
+UPSTASH_REDIS_URL=https://...
+UPSTASH_REDIS_TOKEN=...
 
 # ============================================
 # 9. ANALYTICS (PHASE 2)
