--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@upstash/redis": "^1.28.0",
         "inngest": "^3.15.0",
         "next": "15.1.7",
+        "openai": "^4.80.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "zod": "^3.24.1"
