--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "postcss": "^8",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "3.4.0",
     "typescript": "^5"
   }
 }
