feat: Complete Phase 1-3 implementation
Phase 1 (Data Capture):
- ✅ DSGVO consent screen
- ✅ Document upload (PDF/DOCX)
- ✅ PII encryption (AES-256-GCM)
- ✅ CV metadata extraction

Phase 2 (Job Discovery):
- ✅ Double-apply prevention (2.4)
- ⚠️ Job scraping (2.1-2.3) pending

Phase 3 (Company Intelligence):
- ✅ Company research service (Perplexity)
- ✅ Quote suggestion (OpenAI embeddings)
- ✅ Cache management (7-day TTL)
- ✅ Frontend display components

New Files:
- lib/services/company-enrichment.ts
- lib/services/quote-matcher.ts
- lib/services/cache-monitor.ts
- components/company/company-intel-card.tsx
- components/company/quote-selector.tsx
- directives/AGENT_3.1-3.4_*.md
- directives/MASTER_PROMPT_TEMPLATE.md
- BRIEFING-REVIEW.md

Fixes:
- Fixed demo page TypeScript error
- Updated Master Plan (Phase 3 complete)

Known Issues: 5 fixes pending (see QUALITY_REPORT.md)

--- a/.env.example
+++ b/.env.example
@@ -1,200 +1,24 @@
 # ============================================
 # PATHLY V2.0 - ENVIRONMENT VARIABLES
 # ============================================
-# Copy this file to .env.local and fill in your values
-# NEVER commit .env.local to version control!
+# Only variables utilized in code are listed.
 # ============================================
 
-# ============================================
-# 1. SUPABASE (DATABASE & AUTH)
-# ============================================
+# 1. SUPABASE (Database & Auth)
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
 
-# ============================================
 # 2. AI MODELS
-# ============================================
-
-# Anthropic (Claude Sonnet 4.5 & Haiku 4)
-# Usage: Cover Letter Generation + Quality Judge
 ANTHROPIC_API_KEY=sk-ant-api03-xxx
-
-# Perplexity (Company Research)
-# Usage: Deep company intelligence, values, recent news
+OPENAI_API_KEY=sk-proj-xxx
 PERPLEXITY_API_KEY=pplx-xxx
 
-# OpenAI (Controller LLM + Embeddings)
-# Usage: Job routing, classification, writing style embeddings
-OPENAI_API_KEY=sk-proj-xxx
-
-# ============================================
-# 3. SCRAPING (SMART FALLBACK SYSTEM)
-# ============================================
-# CORRECTED Fallback Order:
-# Job Boards: SerpAPI → ScraperAPI → Playwright
-# ATS Systems: Firecrawl → ScraperAPI → Playwright
-# See docs/SCRAPING_STRATEGY.md for details
-
-# SerpAPI (PRIMARY for Job Boards)
-# Priority: 1 for LinkedIn, Indeed, StepStone
-# Best for: Structured Google Jobs data, no direct scraping
-# Rate Limit: 100 searches/month (Free), 5000/month (Paid)
-SERPAPI_KEY=5d202f16xxx
-
-# ScraperAPI (SECONDARY - Anti-bot bypass)
-# Priority: 2 for job boards, fallback for ATS
-# Best for: Direct URLs when SerpAPI fails
-# Rate Limit: 1000 requests/month (Free)
-SCRAPER_API_KEY=your_scraper_api_key
-
-# Firecrawl (FALLBACK for ATS only)
-# Priority: 3 - ONLY for Greenhouse, Lever, Workday, Ashby
-# NOT for LinkedIn/Indeed/StepStone!
-# Rate Limit: 500 requests/month (Hobby), 10,000/month (Standard)
-FIRECRAWL_API_KEY=fc-xxx
-
-# BrightData (ENTERPRISE FALLBACK - LinkedIn only)
-# Priority: 4
-# Only used if all above fail for LinkedIn
-BRIGHTDATA_USERNAME=your_username
-BRIGHTDATA_PASSWORD=your_password
-
-# Local Playwright (FINAL FALLBACK)
-# Priority: 5
-# Free but slow, no rate limits
-# Auto-enabled, no API key needed
-
-# ============================================
-# 4. COMMUNICATION
-# ============================================
-
-# Resend (Transactional Emails)
-# Usage: Job notifications, weekly summaries, auth emails
-# Rate Limit: 3,000 emails/month (Free), then $0.01/email
-RESEND_API_KEY=re_xxx
-
-# ============================================
-# 5. SECURITY
-# ============================================
-
-# Encryption Key (Generate with: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
-ENCRYPTION_KEY=your_fernet_key_here
-
-# JWT Secret (Generate with: openssl rand -base64 32)
-JWT_SECRET=your_jwt_secret_here
-
-# ============================================
-# 6. GITHUB (OPTIONAL - FOR MCP INTEGRATION)
-# ============================================
-GITHUB_PAT=ghp_xxx
-
-# ============================================
-# 7. MONITORING (PRODUCTION ONLY)
-# ============================================
-
-# Sentry (Error Tracking)
-SENTRY_DSN=https://xxx@xxx.ingest.sentry.io/xxx
-
-# LogTail (Logging)
-LOGTAIL_SOURCE_TOKEN=your_logtail_token
-
-# ============================================
-# 8. PAYMENTS (PHASE 2)
-# ============================================
-
-# Stripe (Subscription Management)
-STRIPE_SECRET_KEY=sk_test_xxx
-STRIPE_PUBLISHABLE_KEY=pk_test_xxx
-STRIPE_WEBHOOK_SECRET=whsec_xxx
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_xxx
-
-# ============================================
-# 8.5 BACKGROUND JOBS
-# ============================================
-
-# Inngest (Background Jobs & Queue)
-INNGEST_EVENT_KEY=...
-INNGEST_SIGNING_KEY=...
-
-# ============================================
-# 8.6 RATE LIMITING
-# ============================================
-
-# Upstash Redis (Rate Limiting)
+# 3. RATE LIMITING
 UPSTASH_REDIS_URL=https://...
 UPSTASH_REDIS_TOKEN=...
 
-# ============================================
-# 9. ANALYTICS (PHASE 2)
-# ============================================
+# 4. CHROME EXTENSION (Sync)
+PLASMO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+PLASMO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
 
-# PostHog (Product Analytics)
-NEXT_PUBLIC_POSTHOG_KEY=phc_xxx
-NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
-
-# ============================================
-# 10. DEPLOYMENT
-# ============================================
-
-# Vercel (Auto-populated in production)
-VERCEL_URL=your-app.vercel.app
-
-# Environment
-NODE_ENV=development # or 'production'
-
-# ============================================
-# 11. CHROME EXTENSION
-# ============================================
-
-# Extension ID (from Chrome Web Store)
-NEXT_PUBLIC_EXTENSION_ID=abcdefghijklmnop
-
-# ============================================
-# SCRAPING STRATEGY FLAGS (OPTIONAL)
-# ============================================
-# Override default fallback behavior
-
-# Force specific scraper (for testing)
-# Options: serpapi | scraperapi | firecrawl | playwright
-# FORCE_SCRAPER=serpapi
-
-# Disable specific scrapers
-# DISABLE_SERPAPI=false
-# DISABLE_SCRAPERAPI=false
-# DISABLE_FIRECRAWL=false
-# DISABLE_PLAYWRIGHT=false
-
-# Retry configuration
-# MAX_SCRAPING_RETRIES=3
-# SCRAPING_TIMEOUT_MS=30000
-
-# ============================================
-# COST TRACKING (OPTIONAL)
-# ============================================
-# Enable to log API costs per request
-# ENABLE_COST_TRACKING=true
-
-# ============================================
-# NOTES
-# ============================================
-# 
-# 1. CRITICAL: Never expose SERVICE_ROLE_KEY in client-side code!
-#    Only use in API routes or server-side functions.
-# 
-# 2. Encryption Key: Must be a valid Fernet key (44 characters)
-# 
-# 3. Scraping Fallback CORRECTED:
-#    - Job Boards (LinkedIn/Indeed): SerpAPI → ScraperAPI → Playwright
-#    - ATS Systems (Greenhouse/Lever): Firecrawl → ScraperAPI → Playwright
-#    - Company Sites: Playwright → ScraperAPI → Firecrawl
-# 
-# 4. Firecrawl is FALLBACK ONLY - Do not use for job boards!
-# 
-# 5. For local development, Supabase CLI auto-populates some vars
-# 
-# 6. Chrome Extension: Must use NEXT_PUBLIC_ prefix for client access
-# 
-# 7. Phase 2 APIs (Stripe, PostHog): Only needed after MVP launch
-# 
-# ============================================
