--- a/package.json
+++ b/package.json
@@ -6,37 +6,58 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.32.0",
-    "@radix-ui/react-progress": "^1.1.0",
+    "@anthropic-ai/sdk": "^0.32.1",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.1.0",
-    "@supabase/supabase-js": "^2.48.1",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.95.3",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pg": "^8.16.0",
     "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.28.0",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.0.0",
+    "framer-motion": "^11.18.2",
     "inngest": "^3.15.0",
     "lucide-react": "^0.460.0",
+    "mammoth": "^1.11.0",
     "next": "15.1.7",
     "openai": "^4.80.0",
+    "pdf-parse": "^2.4.5",
+    "pg": "^8.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^2.5.0",
-    "zod": "^3.24.1"
+    "react-dropzone": "^15.0.0",
+    "react-hook-form": "^7.71.1",
+    "tailwind-merge": "^2.6.1",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.19.33",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
+    "dotenv": "^17.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "jest": "^30.2.0",
     "postcss": "^8",
     "tailwindcss": "3.4.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5"
   }
 }
