--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@upstash/redis": "^1.28.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.18.2",
     "inngest": "^3.15.0",
     "lucide-react": "^0.460.0",
