feat: agent 1.1 job scraping, fix document upload, auth

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,9 @@
-# ============================================
-# PATHLY V2.0 - ENVIRONMENT VARIABLES
-# ============================================
-# Only variables utilized in code are listed.
-# ============================================
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE_KEY=
 
-# 1. SUPABASE (Database & Auth)
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-SUPABASE_SERVICE_ROLE_KEY=your_service_role_key_here
-
-# 2. AI MODELS
-ANTHROPIC_API_KEY=sk-ant-api03-xxx
-OPENAI_API_KEY=sk-proj-xxx
-PERPLEXITY_API_KEY=pplx-xxx
-
-# 3. RATE LIMITING
-UPSTASH_REDIS_URL=https://...
-UPSTASH_REDIS_TOKEN=...
-
-# 4. CHROME EXTENSION (Sync)
-PLASMO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-PLASMO_PUBLIC_SUPABASE_ANON_KEY=your_anon_key_here
-
+# Other API Keys (add as needed)
+# PERPLEXITY_API_KEY=
+# ANTHROPIC_API_KEY=
+# OPENAI_API_KEY=
