--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.95.3",
+    "@types/cheerio": "^0.22.35",
     "@types/pdf-parse": "^1.1.5",
     "@types/pg": "^8.16.0",
     "@upstash/ratelimit": "^1.0.0",
     "@upstash/redis": "^1.28.0",
+    "cheerio": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -40,6 +42,8 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^15.0.0",
     "react-hook-form": "^7.71.1",
+    "serpapi": "^2.2.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
