feat: stabilize E2E pathly workflow & remove scraper system 🚀
Part A: UI Bugfixes
- Refactored AddJobDialog for polished 'Paste Description' tab (500 chars limit)
- Fixed JSX raw HTML rendering in form labels
- Fixed unauthenticated 'Document Upload' fallback for MVP onboarding
- Added requestId/observability logging to all job processing routes

Part B: Scraper-Free Strategy
- Deactivated /api/jobs/scrape (returns 410 Gone)
- Implemented /api/jobs/ingest for AI parsing of pasted text (Agent 1.1)
- Deleted dead job-scraper.ts service
- Updated MASTER_PLAN.md & AGENTS.md to reflect scraper deprecation
- Documented changes in docs/SCRAPING_STRATEGY.md

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,17 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
 
-# Other API Keys (add as needed)
+# App API Keys (add as needed)
 # PERPLEXITY_API_KEY=
 # ANTHROPIC_API_KEY=
 # OPENAI_API_KEY=
+
+# Scraping API Keys (Agent 1.1)
+# === OBSOLETE SCRAPING KEYS (DEPRECATED FOR V2.0 MVP) ===
+# SERPAPI_KEY=
+# JINA_READER_API_KEY=
+# FIRECRAWL_API_KEY=
+# BRIGHT_DATA_API_KEY=
+
+# Encryption
+ENCRYPTION_KEY=your_32_byte_hex_key_here
