--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "docx": "^9.5.3",
     "framer-motion": "^11.18.2",
     "inngest": "^3.15.0",
     "lucide-react": "^0.460.0",
@@ -38,6 +39,7 @@
     "next": "15.1.7",
     "openai": "^4.80.0",
     "pdf-parse": "^2.4.5",
+    "pdf2json": "^4.0.2",
     "pg": "^8.18.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
